--- a/AUVSI_SUAS/reportChallenge/reportChallenge.tex
+++ b/AUVSI_SUAS/reportChallenge/reportChallenge.tex
@@ -92,21 +92,16 @@
 \newpage
 \section{Introduction}
 
-\lettrine[nindent=0em,lines=3]{W}e will present a work made
-for an international challenge\footnote{The challenge is the AUVSI-SUAS hosted
-  in united states in summer 2018.} that every year involves several accademic teams.\\
-This report respects the following structure : \\
-in section \Romannum{2}, we will present the problem statement and in section
-\Romannum{3} we will give tecnical informations on the hardware at our disposal,
-finally in section \Romannum{4}, the adopted solution will be discussed.
+\lettrine[nindent=0em,lines=3]{T}his paper presents a work made
+for an international challenge\footnote{The challenge is the AUVSI-SUAS hosted in united states in summer 2018.} that every year involves several academic teams.\\
+The following structure has been respected: \\
+in section \Romannum{2}, the problem statement is presented; section \Romannum{3} describes technical informations on the hardware and finally in section \Romannum{4}, the adopted solution will be discussed.
 
 % ------------------------------------------------
 
 \section{Problem Statement}
-All the joining teams to the challenge will have to compete on several tasks
-concerning on actual problems in the governance of Unmanned Aerial Vehicles.\\
-Each team will bring its prototype of UAV on a common flight ground and try to
-score the greatest number of points among all the tasks proposed which are:
+All the teams joining the challenge have to compete in several tasks concerning actual problems about the governance of an Unmanned Aerial Vehicle.\\
+Each team brings its prototype of UAV on a common flight ground and tries to score the greatest number of points among all the tasks proposed, which are:
 \begin{enumerate}\centering
 \item Autonomous Flight
 \item Obstacle Avoidance
@@ -115,54 +110,26 @@ score the greatest number of points among all the tasks proposed which are:
 \item Object Localization 
 \item Air Delivery
 \end{enumerate}
-
-
-This will be the first partecipation at a competition of this kind for the team
-Sapienza, in fact the previous challenges in which our university has already
-been involved required a human controlled guidance system.
-Therefore the autonomous flight constraint has to be faced without previous
+This will be the first partecipation at a competition of this kind for the La Sapienza team, indeed the previous challenges in which the University has already been involved required a human controlled guidance system. Therefore, the autonomous flight issue has to be faced without previous
 insights on the matter.
 \newpage
 
-\subsection{Starting Points}
-The areonautical research department, in the past decade, has spent a big
-effort working to an autonomous guidance system, that has been thinkered,
-designed and implemented by master students in theyr thesis.\\
-This system allows to control the complex aerodynamics of the vehicle from an
-higher level of abstraction, its main high level control mode uses a series of
-way points that describes a trajectory.\\
-\bigskip
+\subsection{Starting Point}
+The aeronautical research department, in the past decade, has spent a big effort working on an autonomous guidance system, that has been designed and implemented by Master students in their thesis.\\
+This system allows to control the complex aerodynamics of the vehicle from an higher level of abstraction. Mainly, it uses a series of waypoints that describes a trajectory.\\\\
 \begin{wrapfigure}{r}{5.5cm}
 \caption{YAK scaled aero model}\label{wrap-fig:1}
 \includegraphics[width=5.5cm]{YAK1}
 \end{wrapfigure} 
-
 In this way the aircraft will likely follow a path made of lines that intersects subsequent waypoints.\\
-The system is designed to work on an on-board computer and to communicate with a
-ground station that will continuously send to and receive from the judges's
-server, telemetrical data and mission objectives.\\
+The system is designed to work on an on-board computer and to communicate with a ground station that continuously sends to and receive from the judges' server, telemetrical data and mission objectives.\\
+A fixed-wings radio controlled aircraft model\footnote{It is a scaled reproduction (1:3 ratio) of the YAK 112} has been chosen, like those commonly used in hobby modeling, as shown in Figure.~\ref{wrap-fig:1}
 
-
-We will use a fixed-wigs radio controlled aircraft model\footnote{It is a scaled
-  reproduction (1:3 ratio) of the YAK 112} commonly used in hobby
-modeling as shown in Figure~\ref{wrap-fig:1}.
-
-
-\subsection{Our task}
-As atomic part of the team which counts several members coming from an
-aeronutical background, we have an uncommon area of expertise that concerns
-\textbf{automation} and \textbf{robotics}.\\ So we engaged the autonomous guidance problem that
-comprehend also the obstacle avoidance clause.\par
-The competition will be organized in such a way that during the various missions
-of the challenge each team will receive pose informations about fixed and mobile
-obstacles that will be \textbf{virtual}.\\
-Then the judges will check the success or failure in avoiding obstacles
-according to the \textbf{telemetry} data that they will receive from each team.\\
-In other words, we where supposed to design a \textbf{path planning} algorith
-that will bring the UAV from a start position to a goal position without collisions.
-
-
-
+\subsection{Main task}
+This paper describes the work concerning the area of \textbf{automation} and \textbf{robotics} of an atomic part of the full Sapienza Flight team, which counts several members coming from an aeronutical background.\\ So, the autonomous guidance problem that comprehends also the obstacle avoidance clause, has been engaged.\\
+The competition is organized such that, during the various missions of the challenge, each team receives pose informations about fixed and mobile \textbf{virtual} obstacles.\\
+Then, the judges check the success or failure in avoiding obstacles according to the \textbf{telemetry} data that they receive from each team.\\
+So, there the main goal was to design a \textbf{path planning} algorithm that could bring the UAV from a start to a goal position without collisions.
 
 \section{Hardware components}
 
@@ -172,35 +139,29 @@ that will bring the UAV from a start position to a goal position without collisi
 \includegraphics[width=5.5cm]{YAK3}
 \end{wrapfigure} 
 
-
-
 The engine chosen is a \textbf{DLE55} (in Figure~\ref{wrap-fig:2} ) :
 
 \begin{enumerate}
 \item 50 cc monocylinder petrol engine
 \item reservoir capable of containing 950cc of petrol
-\item Equipped with a 7, 4V LiPo battery
+\item equipped with a 7, 4V LiPo battery
 \end{enumerate}
 
 
 \subsection{On board computing}
-The autonomous guidance architecture, implemented in Matlab and Simulink, is
-converted in compiled high speed C, Cpp language.\\ It will be run by Arduino Due
-and there will be also a Raspberry pi Model 3 that will run a kalman filter in
+The autonomous guidance architecture, implemented in Matlab and Simulink, is converted in compiled high speed C, Cpp language. It is run by Arduino Due and there is also a Raspberry pi Model 3 that runs a kalman filter in
 order to process all signals from sensors.
 
-\bigskip I am arrived here  % TODO at the end we will focus on layouts and image positions
-
+% TODO at the end we will focus on layouts and image positions
 
 \subsection{Sensing instruments}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+
 \subsection{Communication devices}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+ 
 \subsection{Auto pilot framework}
-Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
+
 \section{Hybrid planner}
-We implemented two different strategies, since both present some shortcomings
-and advantages, we tried to take the best of the two worlds
+Two different strategies have been merged, since both present different shortcomings and advantages.
 
 \subsection{RRT}
 RRT (Rapidly-exploring Random Tree) is a probabilistic planner that randomly builds a space-building tree.\\
@@ -213,14 +174,37 @@ Artificial Potential Fields (APF) have been considered for two main reasons:
 \end{itemize}
 Using APF the UAV can react as soon as entering the range of influence of the obstacle, with a smooth movement. This also because an implementation with vertex fields has been made, replacing repulsive actions with actions forcing the robot to get around it.
 \subsection{Implementation}
-We consider the kinematic model of a fixed-wing UAV flying at a constant altitude. So, we can neglect the pitch angle, obtaining:\\
-\begin{array}{lcc}
-$ \dot{x} $ & = & $vcos \psi $ \\
-$ \dot{y} $ & = & $vsin \psi $ \\
-$ \dot{\psi} $ & = & -$ \frac{g}{v} tan \phi $ \\
-$ \dot{\phi} $ & = & $ u_{\phi } $
-\end{array}\\
+We consider the kinematic model of a fixed-wing UAV flying at a constant altitude. So, we can neglect the pitch angle, obtaining:
+\begin{equation}
+\begin{array} {lcl} 
+\dot{x} & = & vcos\psi \\
+\dot{y} & = & vsin\psi \\ 
+\dot{\psi} & = & -\frac{g}{v} tan \phi \\
+\dot{\phi} & = & u_{\phi }
+\end{array}
+\label{linearsystem}
+\end{equation}
 in which the speed $v$ and roll rate $u_{\phi}$ are the control inputs.
+
+As described above, for the path planning we use a mixed approach between RRT and Artificial Potential Fields methods.\\
+At the beginning, a random value is generated. If this value is greater or less than a factor (that is decremented after each cycle), the RRT generates respectively a position biased to the goal or a random one, depending from the five primitives of the UAV and it expands a node that represents the closest possible position of the UAV to the new confguration. If this new position collides with an obstacle, the node is not added to the tree and becomes unavailble for next nodes generation (in a similar way, if all the children of a parent collide with some obstacle, both the children and the parent become unavailable).
+These five primitives are generated and ordered according to another factor obtained from the 
+APF method. Particularly, depending from the configuration of the UAV and from the range of influence of the obstacles, the total vortex field acting on the UAV is computed. 
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=6.5cm]{images/b}%
+	\qquad\qquad
+	\includegraphics[width=6.5cm]{images/a}\label{fig:3}
+	\caption{First image: Positions generated with vortex fields in red; Second image: Final path}
+\end{figure}
+Since the resultant vector of the vortex fields is directed toward the goal, we compute the direction of each primitive and select the one that forms the smallest angles with the direction of the vortex. Thanks to the vortex fields the UAV get around the obstacles avoiding local minima and proceeds faster the goal.
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=6.5cm]{images/c}%
+	\qquad\qquad
+	\includegraphics[width=6.5cm]{images/d}\label{fig:4}
+	\caption{First image: Repulsive fields; Second image: Vortex fields (tangent)}
+\end{figure}
 
 %% \footnote{Example footnote}.
 
